@@ -61,7 +61,6 @@ import org.hibernate.query.Query;
 import org.hibernate.type.StandardBasicTypes;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
@@ -324,6 +323,7 @@ public class ServerFactory extends HibernateFactory {
                 return newPath;
             });
             path.setPosition(parentPath.getPosition() + 1);
+            ServerFactory.save(path);
             paths.add(path);
 
         }
@@ -336,6 +336,7 @@ public class ServerFactory extends HibernateFactory {
             return newPath;
         });
         path.setPosition(0L);
+        ServerFactory.save(path);
         paths.add(path);
         return paths;
     }
@@ -352,13 +353,13 @@ public class ServerFactory extends HibernateFactory {
             // on query with a transient object
             return Optional.empty();
         }
-        return getSession().createNativeQuery("""
-                                      SELECT * from rhnServerPath
-                                      WHERE server_id = :server AND
-                                      proxy_server_id = :proxyserver
-                                      """, ServerPath.class)
-                .setParameter("server", server.getId(), StandardBasicTypes.LONG)
-                .setParameter("proxyserver", proxyServer.getId(), StandardBasicTypes.LONG)
+        return getSession().createQuery("""
+                FROM ServerPath sp
+                WHERE sp.id.server = :server
+                AND sp.id.proxyServer = :proxy
+                """, ServerPath.class)
+                .setParameter("server", server)
+                .setParameter("proxy", proxyServer)
                 .uniqueResultOptional();
     }
 
@@ -368,16 +369,28 @@ public class ServerFactory extends HibernateFactory {
      * @param serverGroup The group to add the servers to
      */
     public static void addServersToGroup(Collection<Server> servers, ServerGroup serverGroup) {
-        List<Long> serverIdsToAdd = servers.stream().filter(s -> s.getOrgId().equals(serverGroup.getOrgId()))
-                .map(Server::getId).collect(Collectors.toList());
+        List<Long> serverIdsToAdd = servers.stream()
+                .filter(s -> s.getOrgId().equals(serverGroup.getOrgId()))
+                .map(Server::getId).toList();
 
+        if (serverIdsToAdd.size() != servers.size()) {
+            String incompatible = servers.stream()
+                    .filter(s -> !s.getOrgId().equals(serverGroup.getOrgId()))
+                    .map(Server::getName)
+                    .collect(Collectors.joining(", "));
+
+            LOG.error("Unable to set group '{}' for systems in different organization: {}",
+                    serverGroup.getName(), incompatible);
+        }
         boolean serversUpdated = insertServersToGroup(serverIdsToAdd, serverGroup.getId());
 
         if (serversUpdated) {
-            servers.stream().forEach(s -> {
-                s.addGroup(serverGroup);
-                SystemManager.updateSystemOverview(s);
-            });
+            servers.stream()
+                    .filter(s -> s.getOrgId().equals(serverGroup.getOrgId()))
+                    .forEach(s -> {
+                        s.addGroup(serverGroup);
+                        SystemManager.updateSystemOverview(s);
+                    });
             if (serverGroup.isManaged()) {
                 updatePermissionsForServerGroup(serverGroup.getId());
             }
@@ -424,7 +437,7 @@ public class ServerFactory extends HibernateFactory {
      * @param serverGroupIn The group to add the server to
      */
     public static void addServerToGroup(Server serverIn, ServerGroup serverGroupIn) {
-        addServersToGroup(Arrays.asList(serverIn), serverGroupIn);
+        addServersToGroup(Collections.singletonList(serverIn), serverGroupIn);
     }
 
     /**
@@ -451,16 +464,19 @@ public class ServerFactory extends HibernateFactory {
      * @param serverGroup The group to remove the servers from
      */
     public static void removeServersFromGroup(Collection<Server> servers, ServerGroup serverGroup) {
-        List<Long> serverIdsToAdd = servers.stream().filter(s -> s.getOrgId().equals(serverGroup.getOrgId()))
-                .map(Server::getId).collect(Collectors.toList());
+        List<Long> serverIdsToAdd = servers.stream()
+                .filter(s -> s.getOrgId().equals(serverGroup.getOrgId()))
+                .map(Server::getId).toList();
 
         boolean serversUpdated = removeServersFromGroup(serverIdsToAdd, serverGroup.getId());
 
         if (serversUpdated) {
-            servers.stream().forEach(s -> {
-                s.removeGroup(serverGroup);
-                SystemManager.updateSystemOverview(s);
-            });
+            servers.stream()
+                    .filter(s -> s.getOrgId().equals(serverGroup.getOrgId()))
+                    .forEach(s -> {
+                        s.removeGroup(serverGroup);
+                        SystemManager.updateSystemOverview(s);
+                    });
             if (serverGroup.isManaged()) {
                 updatePermissionsForServerGroup(serverGroup.getId());
             }
@@ -491,7 +507,7 @@ public class ServerFactory extends HibernateFactory {
      * @param serverGroupIn The group to remove the server from
      */
     public static void removeServerFromGroup(Server serverIn, ServerGroup serverGroupIn) {
-        removeServersFromGroup(Arrays.asList(serverIn), serverGroupIn);
+        removeServersFromGroup(Collections.singletonList(serverIn), serverGroupIn);
     }
 
     /**
